Fixed navbar margin on small displays

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -57,3 +57,7 @@ textarea
 
 li.list-group-item
   line-height: 34px
+
+.row
+  margin-left: 0
+  margin-right: 0
